# GildedRose-Refactoring-Kata

python/: README.md  pyproject.toml
python/gilded_rose/: gilded_rose.py  goblin.py  item.py
python/tests/: test_gilded_rose.py  test_gilded_rose_generic_items.py  texttest_fixture.py
